test/compilable/objc_gfunc.d
// EXTRA_OBJC_SOURCES

extern (Objective-C) void NSLog();
