test/fail_compilation/class1.d
class C
{
    // Non-templated identity opAssign
    void opAssign(C rhs){}
}
